Arquivos de paginação foram alterados de lugar. Componente PokemonCard teve seu layout melhorado e agora mostra a ID do pokemon

--- a/src/components/Pagination/PageFoward/PageFoward.css
+++ b/src/components/Pagination/PageFoward/PageFoward.css
@@ -2,6 +2,6 @@
     transform: rotateX(90deg);
     width: 70px;
     height: 50px;
-    background-image: url('./../../../../../public/images/back.png');
+    background-image: url('./../../../../public/images/back.png');
     background-size: cover;
 }
