--- a/src/components/Pagination/PageBack/PageBack.css
+++ b/src/components/Pagination/PageBack/PageBack.css
@@ -1,6 +1,6 @@
 .pageback {
     width: 70px;
     height: 50px;
-    background-image: url('./../../../../../public/images/back.png');
+    background-image: url('./../../../../public/images/back.png');
     background-size: cover;
 }
