--- a/src/components/Pagination/PageFoward/PageFoward.css
+++ b/src/components/Pagination/PageFoward/PageFoward.css
@@ -1,7 +1,3 @@
 .pagefoward {
-    transform: rotateX(90deg);
-    width: 70px;
-    height: 50px;
-    background-image: url('./../../../../public/images/back.png');
-    background-size: cover;
+    transform: rotate(180deg);
 }
