--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,43 @@
 .footer {
-    height: 20vh;
-    background-color: red;
+    background-color: var(--main-detail-color);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.socialMedias {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 20px;
+}
+
+.socialMedia {
+    display: flex;
+    flex-direction: row;
+    width: 50px;
+    height: 50px;
+}
+
+.github {
+    background-image: url('../../../public/images/github.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 100px;
+}
+
+.linkedin {
+    background-image: url('../../../public/images/linkedin.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.sign {
+    width: 100%;
+    text-align: center;
 }
