troca das setas para avançar e retroceder a página

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --main-detail-color: rgb(110, 0, 0);
+  --main-detail-color: #6e0000;
   --main-radius: 10px;
   --main-text-color: rgb(121, 121, 121);
   --opacity-text-color: rgba(121, 121, 121, 0.205);
