O contexto de favoritar os pokemons está funcionando corretamente. Agora, ao clicar no coração do componente  MyPokemon, o coração do card menor é atualizado junto. O contrário também está funcionando

--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -10,6 +10,15 @@
     cursor: pointer;
 }
 
+.pokemonCard button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    bottom: 1.5rem;
+    right: 0.3rem;
+}
+
 .pokemonCard:hover {
     transform: scale(.95);
 }
