--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -68,6 +68,25 @@
     cursor: pointer;
 }
 
+/* Aplica-se este estilo quando as imagens do pokemon não são encontradas */
+.not-Found-Img-MyPokemon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 0;
+    cursor: pointer;
+}
+
+.not-Found-Img {
+    max-width: 100px;
+    max-height: 100px;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 .myPokemon-img img {
     width: 100%;
     height: 100%;
