--- a/src/components/Pokedex/PokemonCard/CardAllTypes.css
+++ b/src/components/Pokedex/PokemonCard/CardAllTypes.css
@@ -1,71 +1,71 @@
 .grass {
-    background-color: rgba(59, 130, 53, 0.308);
+    background-color: rgba(59, 130, 53);
 }
 
 .fire {
-    background-color: rgb(219, 63, 63, 0.308);
+    background-color: rgb(219, 63, 63);
 }
 
 .water {
-    background-color: rgb(68, 145, 213, 0.308);
+    background-color: rgb(68, 145, 213);
 }
 
 .bug {
-    background-color: rgb(136, 139, 47, 0.308);
+    background-color: rgb(136, 139, 47);
 }
 
 .normal {
-    background-color: rgb(123, 123, 123, 0.308);
+    background-color: rgb(123, 123, 123);
 }
 
 .poison {
-    background-color: rgb(188, 116, 254, 0.308);
+    background-color: rgb(188, 116, 254);
 }
 
 .electric {
-    background-color: rgb(175, 177, 86, 0.308);
+    background-color: rgb(175, 177, 86);
 }
 
 .ground {
-    background-color: rgb(149, 100, 39, 0.308);
+    background-color: rgb(149, 100, 39);
 }
 
 .fairy {
-    background-color: rgb(255, 55, 232, 0.308);
+    background-color: rgb(255, 55, 232);
 }
 
 .fighting {
-    background-color: rgb(137, 33, 33, 0.308);
+    background-color: rgb(137, 33, 33);
 }
 
 .psychic {
-    background-color: rgb(88, 126, 47, 0.308);
+    background-color: rgb(88, 126, 47);
 }
 
 .rock {
-    background-color: rgb(84, 76, 76, 0.308);
+    background-color: rgb(84, 76, 76);
 }
 
 .ghost {
-    background-color: rgb(124, 124, 69, 0.308);
+    background-color: rgb(124, 124, 69);
 }
 
 .dark {
-    background-color: rgb(31, 26, 26, 0.308);
+    background-color: rgb(31, 26, 26);
 }
 
 .steel {
-    background-color: rgb(107, 107, 107, 0.308);
+    background-color: rgb(107, 107, 107);
 }
 
 .ice {
-    background-color: rgb(0, 119, 255, 0.308);
+    background-color: rgb(0, 119, 255);
 }
 
 .dragon {
-    background-color: rgb(80, 8, 8, 0.308);
+    background-color: rgb(80, 8, 8);
 }
 
 .flying {
-    background-color: rgb(74, 143, 203, 0.308);
+    background-color: rgb(74, 143, 203);
 }
