--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -28,26 +28,31 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+    text-align: right;
     padding: 7px;
     color: var(--main-text-color);
     border-radius: var(--main-radius);
     height: 70%;
     width: 100%;
-    box-shadow: 1px 1px 3px 1px var(--main-text-color);
+    overflow: hidden;
 }
 
 .pokemon-title {
     text-transform: capitalize;
     color: var(--main-text-color);
+    z-index: 1; 
 }
 
 .pokemon-id {
     color: white;
     position: absolute;
-    font-size: 1rem;
-    top: 45%;
-    left: 5%;
+    font-size: 4rem;
+    font-weight: 900;
+    font-style: italic;
+    top: 35%;
+    left: -3%;
     font-family: 'Oswald', sans-serif;
+    z-index: 0;
 }
 
 .pokemonCard-img {
@@ -72,6 +77,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    z-index: 1;
 }
 
 .type {
