--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -29,7 +29,7 @@
     align-items: flex-start;
     justify-content: space-between;
     text-align: right;
-    padding: 7px;
+    /* padding: 7px; */
     color: var(--main-text-color);
     border-radius: var(--main-radius);
     height: 70%;
@@ -40,27 +40,36 @@
 .pokemon-title {
     text-transform: capitalize;
     color: var(--main-text-color);
-    z-index: 1; 
+    z-index: 2;
+    left: 5px;
+    position: absolute;
+}
+
+.idContainer {
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    text-align: right;
+    padding-right: 152px;
 }
 
 .pokemon-id {
-    color: white;
-    position: absolute;
-    font-size: 4rem;
+    color: rgba(255, 255, 255, 0.150);
+    font-size: 6rem;
     font-weight: 900;
     font-style: italic;
-    top: 35%;
-    left: -3%;
     font-family: 'Oswald', sans-serif;
     z-index: 0;
+    text-shadow: 1px 1px  rgba(255, 255, 255, 0.15);
 }
 
 .pokemonCard-img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     position: absolute;
     top: 0;
-    right: 0;
+    right: -10px;
+    z-index: 3;
 }
 
 .not-Found-Img-PokemonCard {
@@ -77,7 +86,10 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    z-index: 1;
+    z-index: 2;
+    position: absolute;
+    bottom: 28px;
+    left: 5px;
 }
 
 .type {
@@ -91,6 +103,7 @@
     color: white;
     text-transform: capitalize;
     border-radius: 10px;
+    z-index: 2;
 }
 
 .st {
