--- a/src/components/Pokedex/PokemonCard/CardAllTypes.css
+++ b/src/components/Pokedex/PokemonCard/CardAllTypes.css
@@ -1,49 +1,49 @@
 .grass {
-    background-color: rgba(59, 130, 53);
+    background-color: #45b802;
 }
 
 .fire {
-    background-color: rgb(219, 63, 63);
+    background-color: #c05300;
 }
 
 .water {
-    background-color: rgb(68, 145, 213);
+    background-color: #0051ff;
 }
 
 .bug {
-    background-color: rgb(136, 139, 47);
+    background-color: #778600;
 }
 
 .normal {
-    background-color: rgb(123, 123, 123);
+    background-color: #777759;
 }
 
 .poison {
-    background-color: rgb(188, 116, 254);
+    background-color: #880086;
 }
 
 .electric {
-    background-color: rgb(175, 177, 86);
+    background-color: #b69100;
 }
 
 .ground {
-    background-color: rgb(149, 100, 39);
+    background-color: #ac8e45;
 }
 
 .fairy {
-    background-color: rgb(255, 55, 232);
+    background-color: #b6427c;
 }
 
 .fighting {
-    background-color: rgb(137, 33, 33);
+    background-color: rgb(126, 4, 4)
 }
 
 .psychic {
-    background-color: rgb(88, 126, 47);
+    background-color: #be1a4b;
 }
 
 .rock {
-    background-color: rgb(84, 76, 76);
+    background-color: #8a781e;
 }
 
 .ghost {
@@ -51,21 +51,21 @@
 }
 
 .dark {
-    background-color: rgb(31, 26, 26);
+    background-color: #4d3b2f;
 }
 
 .steel {
-    background-color: rgb(107, 107, 107);
+    background-color: #92929b;
 }
 
 .ice {
-    background-color: rgb(0, 119, 255);
+    background-color: #519e9a;
 }
 
 .dragon {
-    background-color: rgb(80, 8, 8);
+    background-color: #3e11b1;
 }
 
 .flying {
-    background-color: rgb(74, 143, 203);
+    background-color: #8f81b4;
 }
