--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -29,7 +29,6 @@
     align-items: flex-start;
     justify-content: space-between;
     text-align: right;
-    /* padding: 7px; */
     color: var(--main-text-color);
     border-radius: var(--main-radius);
     height: 70%;
@@ -43,6 +42,7 @@
     z-index: 2;
     left: 5px;
     position: absolute;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.100);
 }
 
 .idContainer {
