--- a/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
+++ b/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: flex-start;
     border-radius: 50px;
-    background-color: rgba(0, 0, 0, 0.205);
+    background-color: var(--opacity-text-color);
 }
 
 .lineStat{
