--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --main-radius: 10px;
   --main-text-color: rgb(41, 39, 39);
   --opacity-text-color: rgba(121, 121, 121, 0.205);
+  --text-default-size: 20px;
 }
 
 * {
