--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -39,10 +39,12 @@
 .pokemon-title {
     text-transform: capitalize;
     color: var(--main-text-color);
+    font-size: 1.5rem;
+    font-weight: bold;
     z-index: 2;
     left: 5px;
     position: absolute;
-    text-shadow: -1px -1px rgba(255, 255, 255, 0.100);
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.432);
 }
 
 .idContainer {
