--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -6,7 +6,9 @@
     height: 60vh;
     margin: 0 auto;
     border-radius: 0 0 10px 10px;
-    position: relative;
+    position: fixed;
+    top: 200px;
+    z-index: 1000;
     padding: 1rem 0;
     font-size: 16px;
 }
@@ -34,6 +36,17 @@
     top: 0;
     left: 10%;
     transform: translateX(-10%);
+}
+
+.xclose{
+    color: red;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.xclose:hover{
+    cursor: pointer;
 }
 
 .myPokemon button {
@@ -64,7 +77,7 @@
     justify-content: center;
     z-index: 0;
     width: 50%;
-    height: 100%;
+    height: 80%;
     cursor: pointer;
 }
 
