--- a/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
+++ b/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 310px;
+    width: 100%;
     font-weight: bold;
     color: var(--detail-text-color);
 }
@@ -17,7 +17,7 @@
 }
 
 .lineStat-container{
-    width: 255px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
