--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -2,20 +2,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 99%;
-    height: 60vh;
     border-radius: 10px;
-    position: fixed;
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     margin: auto;
-    max-width: 80%;
+    width: 80%;
+    height: 60%;
+    /* max-width: 1000px;
+    max-height: 800px; */
     z-index: 1000;
-    padding: 1rem 0;
-    font-size: 16px;
 }
 
 .erro-message-img {
@@ -44,7 +42,7 @@
 }
 
 .xclose{
-    color: red;
+    color: var(--main-text-color);
     position: absolute;
     top: 20px;
     right: 20px;
@@ -116,7 +114,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     width: 50%;
     height: 100%;
 }
