--- a/src/components/MyPokemon/NormalStats/NormalStats.css
+++ b/src/components/MyPokemon/NormalStats/NormalStats.css
@@ -1,8 +1,9 @@
 .normalStats {
     display: flex;
-    color: var(--detail-text-color);
+    color: var(--main-text-color);
     font-weight: bold;
     margin: 1% 0;
+    font-size: var(--text-default-size);
 }
 
 .heightStat {
@@ -10,7 +11,6 @@
     align-items: center;
     justify-content: center;
     width: 100px;
-    font-size: var(--text-default-size);
 }
 
 .weightStat {
