--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    text-align: right;
+    text-align: left;
     color: var(--main-text-color);
     border-radius: var(--main-radius);
     height: 70%;
