Modal foi animado ao surgir na tela

--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -13,6 +13,12 @@
     height: 60%;
     z-index: 1000;
     box-shadow: 0 0 1px 1px var(--main-text-color);
+    animation: modalGrow .3s ease-in-out;
+}
+
+@keyframes modalGrow {
+    0% {transform: scale(0);};
+    100% {transform: scale(1)};
 }
 
 .erro-message-img {
