--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -21,6 +21,25 @@
     100% {transform: scale(1)};
 }
 
+.notFoundError {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    padding: 50px;
+    width: 80%;
+    height: 100px;
+    z-index: 1000;
+    box-shadow: 0 0 1px 1px var(--main-text-color);
+    animation: modalGrow .3s ease-in-out;
+}
+
 .erro-message-img {
     width: 20px;
     height: 20px;
