Footer não é mais útil com scroll infinito aplicado, portanto no header está sendo implementado um pop up de agradecimento

--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -24,6 +24,15 @@
     transform: scale(1.05);
 }
 
+.pokemonCard:focus {
+    animation: toutch .2s ease-in-out;
+}
+
+@keyframes toutch {
+    0% { background-size: 40% }
+    100% {background-size: 80%;}
+  }
+
 .pokemonCard-container {
     display: flex;
     flex-direction: column;
