--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,7 @@
     background-color: var(--main-detail-color);
     padding: 10px;
     height: 20vh;
+    position: relative;
 }
 
 @media (max-width: 500px) {
