--- a/src/components/BrunoArruda/BrunoArruda.css
+++ b/src/components/BrunoArruda/BrunoArruda.css
@@ -25,7 +25,7 @@
     width: 95px;
     height: 30px;
     border-radius: 0 0 85% 85% / 30%;
-    animation: startClosed .1s ease-in-out;
+    animation: startClosed .3s ease-in-out;
     cursor: pointer;
     margin-bottom: 10px;
 }
@@ -44,11 +44,11 @@
 
 .open {
     width: 100%;
-    height: 90vh;
-    border-radius: 0 0 85% 85% / 30%;
-    animation: startOpen .1s ease-in-out;
+    height: 100vh;
+    animation: startOpen .3s ease-in-out;
     padding-bottom: 50px;
     position: fixed;
+    background-color: rgb(20, 0, 0)
 }
 
 @keyframes startOpen {
@@ -84,7 +84,7 @@
 
 .motivacional {
     font-size: 1.5rem;
-    animation: motivacionalShow 3s ease-in-out;
+    animation: motivacionalShow 4s ease-in-out;
     font-family: 'Recursive', sans-serif;
     font-style: italic;
 }
@@ -95,6 +95,7 @@
 }
 
 .socialMedias {
+    animation: motivacionalShow 1s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -128,4 +129,5 @@
     width: 100%;
     text-align: center;
     font-size: 1rem;
+    animation: motivacionalShow 5s ease-in-out;
 }
