Ajustes na responsividade quando a tela do smartphone é girada

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,8 @@
     flex-wrap: wrap;
     background-color: var(--main-detail-color);
     padding: 10px;
-    height: 20vh;
+    height: fit-content;
+    min-height: 20vh;
     position: relative;
 }
 
