--- a/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
+++ b/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: flex-start;
     width: 100%;
+    height: 18%;
     font-weight: bold;
     color: var(--detail-text-color);
 }
