--- a/src/components/BrunoArruda/BrunoArruda.css
+++ b/src/components/BrunoArruda/BrunoArruda.css
@@ -1,133 +1,35 @@
 .brunoArruda {
-    color: white;
-    text-align: center;
     position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%);
-    background-color: rgb(43, 0, 0);
-    z-index: 2000;
-}
-
-.dot {
-    color: rgb(255, 0, 0);
-}
-
-.me {
-    color: rgb(0, 153, 255);
-}
-
-.brunoArruda--button {
-    cursor: pointer;
-}
-
-.closed {
-    width: 95px;
-    height: 30px;
-    border-radius: 0 0 85% 85% / 30%;
-    animation: startClosed .3s ease-in-out;
-    cursor: pointer;
-    margin-bottom: 10px;
-}
-
-@keyframes startClosed {
-    0% {
-        width: 100%;
-        height: 70vh;
-    }
-
-    100% {
-        width: 95px;
-        height: 30px;
-    }
-}
-
-.open {
-    width: 100%;
-    height: 100vh;
-    animation: startOpen .3s ease-in-out;
-    padding-bottom: 50px;
-    position: fixed;
-    background-color: rgb(20, 0, 0)
-}
-
-@keyframes startOpen {
-    0% {
-        width: 95px;
-        height: 30px;
-    }
-    100% {
-        width: 100%;
-        height: 50vh;
-    }
-
-}
-
-
-.brunoArruda__content--closed {
-    display: none;
-}
-
-.brunoArruda__content--open{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 100%;
-}
-
-.motivacional__container {
-    width: 90%;
-    text-align: justify;
-    height: fit-content;
-}
-
-.motivacional {
-    font-size: 1.5rem;
-    animation: motivacionalShow 4s ease-in-out;
-    font-family: 'Recursive', sans-serif;
-    font-style: italic;
-}
-
-@keyframes motivacionalShow {
-    0% {opacity: 0};
-    100% {opacity: 0.1};
-}
-
-.socialMedias {
-    animation: motivacionalShow 1s ease-in-out;
+    top: 10px;
+    right: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    padding: 20px;
 }
 
-.socialMedia {
-    display: flex;
-    flex-direction: row;
-    width: 50px;
-    height: 50px;
+.brunoArruda a {
+    color: white;
+    text-decoration: none;
 }
 
-.github {
+.brunoArruda a:visited {
+    color: white;
+}
+
+.brunoAruda--photo {
+    margin-left: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    /* border: 1px solid white; */
+    /* background-image: url('../../../public/images/avatar.png'); */
     background-image: url('../../../public/images/github.png');
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
-    margin-right: 50px;
+    background-repeat: no-repeat;
+    transition: .2s transform;
 }
 
-.linkedin {
-    background-image: url('../../../public/images/linkedin.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.sign {
-    width: 100%;
-    text-align: center;
-    font-size: 1rem;
-    animation: motivacionalShow 5s ease-in-out;
+.brunoAruda--photo:hover {
+    transform: scale(1.1);
 }
