--- a/src/components/MyPokemon/BattleStats/BattleStats.css
+++ b/src/components/MyPokemon/BattleStats/BattleStats.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     width: 100%;
     padding: 0 2%;
     height: 50%;
