--- a/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
+++ b/src/components/MyPokemon/BattleStats/GraphicLine/GraphicLine.css
@@ -1,7 +1,7 @@
 .graphicLine {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
     height: 18%;
     font-weight: bold;
@@ -9,7 +9,7 @@
 }
 
 .content {
-    width: 60px;
+    width: 20%;
     text-align: left;
     text-transform: uppercase;
     font-weight: bold;
@@ -18,11 +18,17 @@
 }
 
 .lineStat-container{
-    width: 100%;
+    width: 70%;
+    margin-right: 10px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     background-color: var(--opacity-text-color);
+}
+
+.numericalValue {
+    width: 10%;
+    text-align: right;
 }
 
 .lineStat{
