--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -25,13 +25,13 @@
     width: 100%;
     height: 15%;
     text-transform: uppercase;
-    color: var(--opacity-text-color);
+    color: var(--main-text-color);
     text-align: center;
     font-size: 2rem;
 }
 
 .myPokemon-id {
-    color: var(--opacity-text-color);
+    color: var(--main-text-color);
     font-size: 3rem;
 }
 
