--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     background-color: var(--main-detail-color);
-    height: 40vh;
+    height: fit-content;
     position: relative;
     padding: 40px;
 }
