--- a/src/components/Header/Searchbar/Searchbar.css
+++ b/src/components/Header/Searchbar/Searchbar.css
@@ -2,8 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2%;
     width: 50%;
+}
+
+.header img {
+  margin: 1%;
 }
 
 .searchbar-input,
@@ -15,7 +18,8 @@
 
 .searchbar-input {
     padding-left: 7px;
-    width: 90%;
+    max-width: 300px;
+    width: 50%;
     border-radius:  var(--main-radius)
                     0
                     0
