--- a/src/components/BrunoArruda/BrunoArruda.css
+++ b/src/components/BrunoArruda/BrunoArruda.css
@@ -38,6 +38,7 @@
     .brunoArruda {
         width: 100%;
         justify-content: space-between;
-        padding: 0 2%;
+        padding: 0 0 0 20px;
+        margin-left: none;
     }
 }
