--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -16,30 +16,31 @@
     box-shadow: 0 0 10px 1px var(--main-text-color);
     animation: modalGrow .3s ease-in-out;
     overflow: hidden;
+    padding: 2.5rem 10px 10px 10px;
 }
 
 .myPokemon-title-container {
+    position: absolute;
+    top: 0;
+    right: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
-    height: 15%;
     text-transform: uppercase;
     color: var(--main-text-color);
-    text-align: center;
     font-size: 2rem;
+    padding-left: 5%;
+    margin-top: 10px;
 }
 
 .myPokemon-id {
     color: var(--main-text-color);
-    font-size: 10rem;
-    position: absolute;
-    bottom: -80px;
-    left: 0;
-    color: rgba(255, 255, 255, 0.150);
+    color: rgba(255, 255, 255, 0.315);
     font-style: italic;
-    font-weight: 900;
-    z-index: -1;
+    font-size: 3rem;
+    margin-right: 10px;
 }
 
 .myPokemon-content-container {
@@ -52,7 +53,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     width: 50%;
     height: 100%;
     position: relative;
@@ -100,15 +101,11 @@
 
 @media (max-width: 650px) {
     .myPokemon {
-        height: 80%;
-    }
-
-    .myPokemon-id {
-        left: -10%;
+        height: 90%;
     }
 
     .myPokemon-title-container {
-        height: 10%;
+        padding: 0;
     }
 
     .myPokemon-content-container {
@@ -117,7 +114,9 @@
 
     .content-container, .image-container {
         width: 100%;
-        height: 45%;
+        height: 40%;
+        max-width: none;
+        max-height: none;
     }
 
 }
@@ -126,16 +125,6 @@
 
     .myPokemon {
         height: 90%;
-    }
-
-}
-
-@media (max-width: 590px) {
-
-    .myPokemon-id {
-        font-size: 6rem;
-        bottom: -60px;
-        left: -20px;
     }
 
 }
