Componente PokemonTypes agora precisa receber o valor do position como props para se adequar as diferentes telas onde foi importado. A responsividade após adicioná-lo ao MyPokemon foi melhorada

--- a/src/components/MyPokemon/NormalStats/NormalStats.css
+++ b/src/components/MyPokemon/NormalStats/NormalStats.css
@@ -2,7 +2,7 @@
     display: flex;
     color: var(--main-text-color);
     font-weight: bold;
-    margin: 1% 0;
+    margin: 10px 0;
     font-size: var(--text-default-size);
 }
 
