--- a/src/components/MyPokemon/MyPokemon.css
+++ b/src/components/MyPokemon/MyPokemon.css
@@ -16,7 +16,7 @@
     box-shadow: 0 0 10px 1px var(--main-text-color);
     animation: modalGrow .3s ease-in-out;
     overflow: hidden;
-    padding: 2.5rem 10px 10px 10px;
+    padding: 2.5rem 10px 0 10px;
 }
 
 .myPokemon-title-container {
@@ -114,7 +114,7 @@
 
     .content-container, .image-container {
         width: 100%;
-        height: 40%;
+        height: 43%;
         max-width: none;
         max-height: none;
     }
