--- a/src/components/Pokedex/PokemonCard/PokemonTypes/PokemonTypes.css
+++ b/src/components/Pokedex/PokemonCard/PokemonTypes/PokemonTypes.css
@@ -3,9 +3,12 @@
     align-items: center;
     justify-content: flex-start;
     z-index: 2;
-    position: absolute;
     bottom: 28px;
     left: 5px;
+}
+
+.position-absolute {
+    position: absolute;
 }
 
 .type {
